added signup view

--- a/src/Cms/CoreBundle/Resources/views/User/register.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/User/register.html.twig
@@ -1,24 +1,49 @@
 {% extends 'CmsCoreBundle:Welcome:base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+    '@CmsUserBundle/Resources/public/css/login.css'
+    '@CmsCoreBundle/Resources/public/css/user/signup.css'
+    filter='cssrewrite,?yui_css' %}
+    <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+{% endblock %}
+
 {% block body %}
-    <article>
-        <h1>Register</h1>
-        <p>Register as a new user here</p>
-
-        {% if notices is not empty %}
-            <aside>
-                <h3>Warning</h3>
-                {% for notice in notices  %}
-                    <p>{{ notice }}</p>
-                {% endfor %}
-            </aside>
-        {% endif %}
-
-        <form action="{{ path('cms_core.user_save') }}" method="post">
-            <input type="hidden" name="token" value="{{ token }}"/>
-            <input type="email" name="email" placeholder="email" autofocus required/>
-            <input type="password" name="password" placeholder="password" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="must be at least 8 characters and must contain one uppercase and one number" required/>
-            <input type="submit" value="Create Account"/>
-        </form>
-    </article>
+    <div class="container">
+        <div class="row">
+            <section class="span offset4">
+                <div class="login">
+                    <div class="login-form">
+                        {% for notice in notices  %}
+                            <div class="alert"><i class="icon-warning-sign"></i> {{ notice }}</div>
+                        {% endfor %}
+                        <form action="{{ path('cms_core.user_create') }}" method="post">
+                            <input type="hidden" name="token" value="{{ token }}"/>
+                            <input type="hidden" name="accountType" value="{{ accountType }}"/>
+                            <div class="control-group">
+                                <input type="text" id="first-name" class="login-field" name="firstName" placeholder="first name" value="{{ firstName|default() }}" pattern="^[A-Za-z_]{1,20}$" title="First name must be all letters and no longer than 20 characters" required/>
+                            </div>
+                            <div class="control-group">
+                                <input type="text" id="last-name" class="login-field" name="lastName" placeholder="last name" value="{{ lastName|default }}" pattern="^[A-Za-z_]{1,35}$" title="Last name must be all letters and no longer than 35 characters" required/>
+                            </div>
+                            <div class="control-group">
+                                <input type="email" name="email" class="login-field" value="{{ email|default() }}" placeholder="email" required/>
+                            </div>
+                            <div class="control-group">
+                                <label for="login-pass"></label>
+                                <input type="password" id="login-pass" name="password" class="login-field" placeholder="password" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="must be at least 8 characters and must have one uppercase letter and one number" required/>
+                            </div>
+                            <div class="control-group">
+                                <div class="controls">
+                                    <input type="submit" value="Create Account" class="btn btn-danger btn-large btn-block" />
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 {% endblock %}
