--- a/src/Cms/CoreBundle/Resources/views/App/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CmsCoreBundle:App:base.html.twig' %}
 
-{% block title %}App Home | Cms{% endblock %}
+{% block title %}App Home | PipeStack Cms{% endblock %}
 
 {% block body %}
     <section>
