--- a/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
@@ -1,18 +1,11 @@
 {% extends 'CmsCoreBundle:App:base.html.twig' %}
 
 {% block title %}
-    {{ site.name }} | PipeStack
+    {{ site.name }}{{ parent() }}
 {% endblock %}
 
 {% block body %}
-    {% block classicNavPrimary %}
-        {{ parent() }}
-    {% endblock %}
-    <div class="row" id='row-top'>
-        {% block classicNavAdmin %}
-            {{ parent() }}
-        {% endblock %}
-    </div>
+    {{ parent() }}
 {% endblock %}
 
 {% block bodyCopy %}
