--- a/src/Cms/CoreBundle/Resources/public/css/app/base.css
+++ b/src/Cms/CoreBundle/Resources/public/css/app/base.css
@@ -1,6 +1,3 @@
-#row-top {
-    margin-top: 54px;
-}
 .sidebar-nav {
     position: fixed;
     top: 54px;
@@ -15,4 +12,10 @@
     text-decoration: none;
     color: #2C3E50;
     margin: 20px 0px;
+}
+#row-top {
+    margin-top: 54px;
+}
+.content-container {
+    margin-left: 230px;
 }
