--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -1,24 +1,27 @@
 {% extends 'CmsCoreBundle:App:base.html.twig' %}
 
+{% block javascripts %}
+    {{ parent() }}
+    {% javascripts
+        'flat-ui/js/bootstrap-select.js'
+        '@CmsCoreBundle/Resources/public/js/contentType/read.js'
+        filter='?yui_js' %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+
 {% block title %}
     {{ contentType.name | title }}{{ parent() }}
 {% endblock %}
 
 {% block body %}
     {{ parent() }}
-    <div class="container content-container">
-        <div class="row" id="row-top">
-            <div class="span3">
-                first
-            </div>
-            <div class="span3">
-                second
-            </div>
-            <div class="span3">
-                third
-            </div>
-            <div class="span3">
-                fourth
+    <div class="row" id="row-top">
+        <div class="content-container span9">
+            <div class="row">
+                <div class="span3">first</div>
+                <div class="span3">second</div>
+                <div class="span3">third</div>
             </div>
         </div>
     </div>
