--- a/src/Cms/CoreBundle/Resources/public/css/app/base.css
+++ b/src/Cms/CoreBundle/Resources/public/css/app/base.css
@@ -1,3 +1,6 @@
+#row-top {
+    margin-top: 54px;
+}
 .sidebar-nav {
     position: fixed;
     top: 54px;
@@ -13,10 +16,15 @@
     color: #2C3E50;
     margin: 20px 0px;
 }
-#row-top {
-    margin-top: 54px;
+#nav-admin-container {
+    width: 12%;
 }
-.content-container {
-    margin-left: 280px;
-    max-width: 960px;
+@media (min-width: 1200px) and (max-width: 1300px) {
+    #nav-admin-container {width: 13%;}
+}
+@media (min-width: 979px) and (max-width: 1200px) {
+    #nav-admin-container {width: 14%;}
+}
+@media (min-width: 767px) and (max-width: 979px) {
+    #content-container {width: 95%}
 }
