--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -69,9 +69,51 @@
             </select>
         </div>
         <div class="span2">
-            <button class="btn btn-primary btn-block">
+            <button class="btn btn-info btn-block">
                 Filter
             </button>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th><input type="checkbox" name="master-checkbox" id="master-checkbox"/></th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Categories</th>
+                    <th>Tags</th>
+                    <th>Commments</th>
+                    <th>Created</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for node in nodes  %}
+                <tr>
+                    <td><input type="checkbox" name="checkbox" id="checkbox-{{ node.id }}"/></td>
+                    <td>{{ node.title|title }}</td>
+                    {% if node.author.name is defined %}
+                        <td><a href="{{ node.author.url|default('#') }}">{{ node.author.name }}</a></td>
+                    {% else %}
+                        <td></td>
+                    {% endif %}
+                    <td>
+                        {% for category in node.categories  %}
+                            {{ category.parent }} - {{ cateogry.child | default() }}
+                        {% endfor %}
+                    </td>
+                    <td>
+                        {% for tag in node.tags  %}
+                            {{ tag }}
+                        {% endfor %}
+                    </td>
+                    <td>{{ comment|default()|length }}</td>
+                    <td>{{ node.id }}</td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 {% endblock %}
