added abstract base document class and extended all entities with base class

--- a/web/flat-ui/custom/css/custom.css
+++ b/web/flat-ui/custom/css/custom.css
@@ -44,3 +44,7 @@
     background-color: #ECF0F1;
     padding: 20px 0px;
 }
+.checkbox.checked .icons,
+.radio.checked .icons {
+    color: #3498DB;
+}
