--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -1,9 +1,19 @@
 {% extends 'CmsCoreBundle:App:base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets
+        '@CmsCoreBundle/Resources/public/css/contentType/read.css'
+        filter='cssrewrite, ?yui_css' %}
+        <link rel="stylesheet" href="{{ asset_url }}"/>
+    {% endstylesheets %}
+{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
     {% javascripts
         'flat-ui/js/bootstrap-select.js'
+        'flat-ui/js/flatui-checkbox.js'
         '@CmsCoreBundle/Resources/public/js/contentType/read.js'
         filter='?yui_js' %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
@@ -17,11 +27,12 @@
 {% block content %}
     {{ parent() }}
     <div class="row-fluid">
-        <div class="span8">
+        <div class="span4" id='header'>
             <h1>{{ contentType.name |title }}s</h1>
+            <a href="#" id="add-new"><i class="icon-plus-sign"></i> Add New</a>
         </div>
-        <div class="span4" style="margin: 14px 14px;">
-            <input type="search" style="height: 17px;" placeholder="Search for {{ contentType.name |title }}"/>
+        <div class="span4 pull-right" id="search-container">
+            <input type="search" id="search" class="span2 pull-right" placeholder="Search for {{ contentType.name | title }}"/>
         </div>
     </div>
     <div class="row-fluid">
@@ -74,12 +85,27 @@
             </button>
         </div>
     </div>
+    <hr>
+    <div class="row-fluid">
+        <div class="span4">
+            <button class="btn btn-lower disabled" id='edit'>Edit</button>
+            <button class="btn btn-lower disabled" id='delete'>Delete</button>
+        </div>
+        <div class="span4 offset4">
+            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-lower pull-right" id='pag-next'>Next</a>
+            <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page-1}) }}" class="btn btn-lower pull-right" id='pag-previous'>Previous</a>
+        </div>
+    </div>
     <div class="row-fluid">
         <div class="span12">
             <table class="table">
                 <thead>
                 <tr>
-                    <th><input type="checkbox" name="master-checkbox" id="master-checkbox"/></th>
+                    <th>
+                        <label class="checkbox" for="master-checkbox" id="master-checkbox-container">
+                            <input type="checkbox" data-toggle="checkbox" name="master-checkbox" id="master-checkbox"/>
+                        </label>
+                    </th>
                     <th>Title</th>
                     <th>Author</th>
                     <th>Categories</th>
@@ -91,7 +117,11 @@
                 <tbody>
                 {% for node in nodes  %}
                 <tr>
-                    <td><input type="checkbox" name="checkbox" id="checkbox-{{ node.id }}"/></td>
+                    <td>
+                        <label class="checkbox" for="checkbox-{{ node.id }}">
+                            <input type="checkbox" data-toggle="checkbox" name="checkbox" id="checkbox-{{ node.id }}"/>
+                        </label>
+                    </td>
                     <td>{{ node.title|title }}</td>
                     {% if node.author.name is defined %}
                         <td><a href="{{ node.author.url|default('#') }}">{{ node.author.name }}</a></td>
@@ -109,7 +139,7 @@
                         {% endfor %}
                     </td>
                     <td>{{ comment|default()|length }}</td>
-                    <td>{{ node.id }}</td>
+                    <td>{{ node.created|date('m/d/y g:i a') }}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
