--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -87,8 +87,8 @@
     <hr>
     <div class="row-fluid">
         <div class="span4">
-            <button class="btn btn-lower btn-content-action" id='edit' disabled><i class="icon-edit"></i> Edit</button>
-            <button class="btn btn-lower btn-content-action" id='delete' disabled><i class="icon-trash"></i> Trash</button>
+            <button class="btn btn-lower btn-checkbox-callback" id='edit' disabled><i class="icon-edit"></i> Edit</button>
+            <button class="btn btn-lower btn-checkbox-callback" id='delete' disabled><i class="icon-trash"></i> Trash</button>
         </div>
         <div class="span4 offset4">
             <a href="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id, 'page':page+1}) }}" class="btn btn-lower pull-right" id='pag-next'>Next <i class="icon-chevron-right"></i></a>
@@ -113,12 +113,12 @@
                     <th>Created</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="checkbox-container">
                 {% for node in nodes  %}
                 <tr>
                     <td>
                         <label class="checkbox" for="checkbox-{{ node.id }}">
-                            <input type="checkbox" class="slave-checkbox" data-toggle="checkbox" name="checkbox" id="checkbox-{{ node.id }}"/>
+                            <input type="checkbox" class="slave-checkbox" data-toggle="checkbox" name="content-checkbox" id="checkbox-{{ node.id }}"/>
                         </label>
                     </td>
                     <td>{{ node.title|title }}</td>
