--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,10 +6,13 @@
         <title>{% block title %} | PipeStack{% endblock %}</title>
         {% block metatags %}{% endblock %}
         {% block stylesheets %}
-            <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-            <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+            {#<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">#}
+            {#<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">#}
+            <link href="/dependencies/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+            <link href="/dependencies/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+            <link href="/dependencies/font-awesome/css/font-awesome.min.css" rel="stylesheet">
             {% stylesheets
-                'flat-ui/css/flat-ui.css'
+                'flat-ui/css/flat-ui-local.css'
                 'flat-ui/custom/css/custom.css'
                 filter='cssrewrite, ?yui_css' %}
                 <link rel="stylesheet" href="{{ asset_url }}"/>
@@ -20,8 +23,10 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-            <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+            {#<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>#}
+            {#<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>#}
+            <script src="/dependencies/jquery-1.10.1.min.js"></script>
+            <script src="/dependencies/bootstrap/js/bootstrap.min.js"></script>
         {% endblock %}
     </body>
 </html>
