--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -115,7 +115,7 @@
                 </thead>
                 <tbody class="checkbox-container">
                 {% for node in nodes  %}
-                <tr>
+                <tr id="tr-{{ node.id }}">
                     <td>
                         <label class="checkbox" for="checkbox-{{ node.id }}" data-id="{{ node.id }}">
                             <input type="checkbox" class="slave-checkbox selectedId" data-toggle="checkbox" name="content-checkbox" id="checkbox-{{ node.id }}"/>
@@ -146,45 +146,4 @@
         </div>
     </div>
     <input type="hidden" id="token" value="{{ token }}"/>
-{% endblock %}
-
-
-
-{% block bodyCopy %}
-    <h1>{{ contentType.name | title }}</h1>
-
-    <legend>data</legend>
-    <li>
-        <ul>
-            formats:
-            {% for format in contentType.formats  %}
-                {{ format }}
-            {% endfor %}
-        </ul>
-        <ul>slug prefix: {{ contentType.slugPrefix }}</ul>
-    </li>
-
-    <legend>Nodes:</legend>
-    <ul>
-        {% for node in nodes  %}
-            <li>
-                <a href="{{ app.request.baseUrl }}/{{ node.slug }}">{{ node.title | title }}</a>
-            </l1>
-        {% endfor %}
-    </ul>
-
-    <form action="{{ path('cms_core.contentType_delete') }}" method="post">
-        <input type="hidden" name="token" value="{{ token }}"/>
-        <input type="hidden" name="id" value="{{ contentType.id }}"/>
-        <input type="hidden" name="siteId" value="{{ site.id }}"/>
-        <input type="submit" value="Delete ContentType"/>
-    </form>
-
-    <h3>Create a node</h3>
-    <a href="{{ path('cms_core.node_new', {'siteId' : site.id, 'contentTypeId' : contentType.id }) }}">add a new node</a>
-
-    <nav>
-        <a href="{{ path('cms_core.site_read', {'id':site.id}) }}">Back to Site</a>
-    </nav>
-
 {% endblock %}
